--- a/samples/typescript/tsconfig.json
+++ b/samples/typescript/tsconfig.json
@@ -5,7 +5,7 @@
     "noImplicitAny": false,
     "moduleResolution": "node",
     "removeComments": false,
-    "sourceMap": false,
+    "sourceMap": true,
     "target": "es6",
     "declaration": true
   },
