--- a/samples/typescript/package.json
+++ b/samples/typescript/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.2",
   "description": "TypeScript Sample",
   "devDependencies": {
-    "msgraph-types": "https://github.com/microsoftgraph/msgraph-typescript-typings.git",
+    "@microsoft/microsoft-graph-types": "^0.3.1",
     "typescript": "^2.1"
   }
 }
