--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   ],
   "types": "./lib/src/index.d.ts",
   "devDependencies": {
-    "@types/superagent": "^2.0.36",
     "@types/mocha": "^2.2.34",
+    "@types/superagent": "^2.0.36",
     "browserify": "^13.1.0",
+    "es6-promise": "^4.0.5",
     "mocha": "^3.2.0",
     "typescript": "^2.1"
   },
