--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/microsoft-graph-client",
-  "version": "0.3.3",
+  "version": "0.4.0",
   "description": "Microsoft Graph Client Library",
   "main": "lib/src/index.js",
   "typings": "lib/src/index",
@@ -13,7 +13,8 @@
     "@types/mocha": "^2.2.34",
     "browserify": "^13.1.0",
     "mocha": "^3.2.0",
-    "typescript": "^2.1"
+    "typescript": "^2.2.1",
+    "es6-promise": "^4.1.0"
   },
   "scripts": {
     "build": "tsc && node node-browserify.js > lib/graph-js-sdk-web.js",
