--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "@types/mocha": "^2.2.34",
     "browserify": "^13.1.0",
     "mocha": "^3.2.0",
-    "typescript": "^2.2.1",
-    "es6-promise": "^4.1.0"
+    "typescript": "^2.2.1"
   },
   "scripts": {
     "build": "tsc && node node-browserify.js > lib/graph-js-sdk-web.js",
     "test": "mocha lib/test"
   },
   "dependencies": {
-    "superagent": "~3.3.0"
+    "superagent": "~3.3.0",
+    "es6-promise": "^4.1.0"
   },
   "repository": {
     "type": "git",
