--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "build": "tsc && node node-browserify.js > lib/graph-js-sdk-web.js",
     "test": "mocha lib/spec/core",
-    "test:types": "mocha lib/spec/types"
+    "test:types": "tsc --p spec/types && mocha spec/types"
   },
   "dependencies": {
     "superagent": "^3.5.2",
