Update unit test Switch to isomorphic fetch

--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@types/node": "^9.4.0",
     "browserify": "^13.1.0",
     "mocha": "^3.2.0",
-    "typescript": "^2.2.1",
-    "whatwg-fetch": "^2.0.3"
+    "typescript": "^2.2.1"
   },
   "scripts": {
     "build": "tsc && node node-browserify.js > lib/graph-js-sdk-web.js",
@@ -22,7 +21,8 @@
     "test:types": "tsc --p spec/types && mocha spec/types"
   },
   "dependencies": {
-    "es6-promise": "^4.1.0"
+    "es6-promise": "^4.1.0",
+    "isomorphic-fetch": "^2.2.1"
   },
   "repository": {
     "type": "git",
