--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "sourceMap": true,
     "target": "es5",
     "declaration": true,
-    "outDir": "lib/"
+    "outDir": "lib/",
+    "lib": ["es6","dom"]
   },
   "exclude": [
       "node_modules",
