--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "removeComments": true,
     "sourceMap": true,
     "target": "es5",
+    "lib": ["es6", "dom"],
     "declaration": true,
     "outDir": "lib/"
   },
