--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@types/node": "^9.4.0",
     "browserify": "^13.1.0",
     "mocha": "^5.2.0",
-    "typescript": "^2.2.1"
+    "typescript": "^2.2.1",
+    "uglify-js": "^3.4.5"
   },
   "scripts": {
-    "build": "tsc && node node-browserify.js > lib/graph-js-sdk-web.js",
+    "build": "tsc && node node-browserify.js > lib/graph-js-sdk-web.js && uglifyjs ./lib/graph-js-sdk-web.js --output ./lib/graph-js-sdk-web.js",
     "test": "mocha lib/spec/core",
     "test:types": "tsc --p spec/types && mocha spec/types"
   },
