--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "uglify-js": "^3.4.5"
   },
   "scripts": {
-    "build": "tsc && node node-browserify.js > lib/graph-js-sdk-web.js && uglifyjs ./lib/graph-js-sdk-web.js --output ./lib/graph-js-sdk-web.js",
+    "compile": "tsc",
+    "rollup-core": "node core-browserify.js > lib/graph-js-sdk-core.js && uglifyjs lib/graph-js-sdk-core.js --output lib/graph-js-sdk-core.js",
+    "rollup-with-vendor": "node node-browserify.js > lib/graph-js-sdk-web.js && uglifyjs ./lib/graph-js-sdk-web.js --output ./lib/graph-js-sdk-web.js",
+    "build-core": "npm run compile && npm run rollup-core",
+    "build-with-vendor": "npm run compile && npm run rollup-with-vendor",
+    "build": "npm run compile && npm run rollup-core && npm run rollup-with-vendor",
     "test": "mocha lib/spec/core",
     "test:types": "tsc --p spec/types && mocha spec/types"
   },
