--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "noEmitOnError": true,
     "noImplicitAny": false,
     "moduleResolution": "node",
-    "removeComments": true,
+    "removeComments": false,
     "sourceMap": true,
     "target": "es5",
     "lib": ["es6", "dom"],
@@ -15,6 +15,7 @@
       "node_modules",
       "lib",
       "samples",
+      "spec/tasks",
       "spec/types"
   ],
   "include": [
