--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -6,6 +6,7 @@
     "moduleResolution": "node",
     "removeComments": true,
     "sourceMap": true,
+    "downlevelIteration": true,
     "target": "es6",
     "declaration": true
   }
