--- a/spec/tsconfig.json
+++ b/spec/tsconfig.json
@@ -7,6 +7,7 @@
     "removeComments": true,
     "sourceMap": true,
     "target": "es6",
+    "lib": ["es7", "dom"],
     "declaration": true
   }
 }
