--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "removeComments": false,
     "sourceMap": true,
     "target": "es5",
-    "lib": ["es6", "dom"],
+    "lib": ["es7", "dom"],
     "declaration": true,
     "outDir": "lib/"
   },
@@ -21,6 +21,8 @@
   "include": [
       "./src/index.ts",
       "./src/LargeFileUploadTask.ts",
+      "./src/BatchRequestContent.ts",
+      "./src/BatchResponseContent.ts",
       "./spec/core"
   ]
 }
