--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/microsoft-graph-client",
-  "//": "NOTE: The version here should match exactly the exported const PACKAGE_VERSION in common.ts. If you change it here, also change it there.",
+  "//": "NOTE: The version here should match exactly the exported const PACKAGE_VERSION in Constants.ts. If you change it here, also change it there.",
   "version": "1.3.0",
   "description": "Microsoft Graph Client Library",
   "main": "lib/src/index.js",
@@ -17,7 +17,8 @@
     "isomorphic-fetch": "^2.2.1",
     "mocha": "^5.2.0",
     "typescript": "^3.1.6",
-    "uglify-es": "^3.3.9"
+    "uglify-es": "^3.3.9",
+    "window": "^4.2.5"
   },
   "scripts": {
     "compile": "tsc",
