--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/fetch-mock": "^6.0.4",
-    "@types/mocha": "^5.2.5",
     "@types/isomorphic-fetch": "0.0.34",
+    "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.10",
     "browserify": "^16.2.3",
     "chai": "^4.2.0",
@@ -28,8 +28,9 @@
   },
   "scripts": {
     "compile": "tsc",
-    "browserify": "node node-browserify.js > lib/graph-js-sdk-web.js && uglifyjs ./lib/graph-js-sdk-web.js --output ./lib/graph-js-sdk-web.js",
-    "build": "npm run compile && npm run browserify",
+    "web:js": "node browserify-with-dependencies.js > lib/graph-js-sdk-web.js && uglifyjs ./lib/graph-js-sdk-web.js --output ./lib/graph-js-sdk-web.js",
+    "core:js": "node browserify.js > lib/graph-js-sdk-core.js && uglifyjs ./lib/graph-js-sdk-core.js --output ./lib/graph-js-sdk-core.js",
+    "build": "npm run compile && npm run web:js && npm run core:js",
     "test": "mocha lib/spec/content && mocha lib/spec/core && mocha lib/spec/middleware && mocha lib/spec/tasks",
     "test:content": "tsc -p spec && mocha spec/content",
     "test:core": "tsc -p spec && mocha spec/core",
