Added complete docs CustomMiddleware, CustomAuthProvider, GettingRawResponse. Added Graph request and error handlers

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,6 +24,18 @@
             "cwd": "${workspaceRoot}",
             "outFiles": [],
             "internalConsoleOptions": "openOnSessionStart"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Run workload tests",
+            "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+            "args": [
+                "${workspaceRoot}/spec/development/workload/*.js"
+            ],
+            "cwd": "${workspaceRoot}",
+            "outFiles": [],
+            "internalConsoleOptions": "openOnSessionStart"
         }
     ]
 }
