1. Adding tslib to reduce the size of the output file 2. Two MSALAuthenticationProviders one for output js and one for npm package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "noEmitOnError": true,
     "noImplicitAny": false,
     "moduleResolution": "node",
+    "importHelpers": true,
     "removeComments": false,
     "sourceMap": true,
     "target": "es5",
