--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lib/"
   ],
   "types": "./lib/src/index.d.ts",
+  "dependencies": {
+    "msal": "^0.2.4",
+    "tslib": "^1.9.3"
+  },
   "devDependencies": {
-    "@types/chai": "^4.1.7",
     "@types/fetch-mock": "^6.0.4",
     "@types/isomorphic-fetch": "0.0.34",
     "@types/mocha": "^5.2.5",
@@ -21,7 +24,6 @@
     "fetch-mock": "^7.2.5",
     "isomorphic-fetch": "^2.2.1",
     "mocha": "^5.2.0",
-    "msal": "^0.2.3",
     "typescript": "^3.1.6",
     "uglify-es": "^3.3.9",
     "window": "^4.2.5"
