Changes: 1. Implementation of middleware options at both client and request level 2. Added docs for the middleware options 3. Added middleware util to have utils for middlewares 4. Added public for constructor for more readability

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,6 +35,20 @@
                 "${workspaceRoot}/spec/development/workload/*.js"
             ],
             "cwd": "${workspaceRoot}",
+            "preLaunchTask": "Run Build",
+            "outFiles": [],
+            "internalConsoleOptions": "openOnSessionStart"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Run middleware tests",
+            "program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
+            "args": [
+                "${workspaceRoot}/spec/middleware/*.js"
+            ],
+            "cwd": "${workspaceRoot}",
+            "preLaunchTask": "Run Build",
             "outFiles": [],
             "internalConsoleOptions": "openOnSessionStart"
         }
