--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
     "tslib": "^1.9.3"
   },
   "devDependencies": {
-    "@types/fetch-mock": "^7.2.2",
     "@types/isomorphic-fetch": "0.0.34",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.10",
     "browserify": "^16.2.3",
     "chai": "^4.2.0",
-    "fetch-mock": "^7.2.5",
     "msal": "^0.2.4",
     "mocha": "^5.2.0",
     "typescript": "^3.1.6",
@@ -33,12 +31,12 @@
     "web:js": "node browserify-with-dependencies.js > lib/graph-js-sdk-web.js && uglifyjs ./lib/graph-js-sdk-web.js --output ./lib/graph-js-sdk-web.js",
     "core:js": "node browserify.js > lib/graph-js-sdk-core.js && uglifyjs ./lib/graph-js-sdk-core.js --output ./lib/graph-js-sdk-core.js",
     "build": "npm run compile && npm run web:js && npm run core:js",
-    "test": "mocha lib/spec/content && mocha lib/spec/core && mocha lib/spec/tasks",
+    "test": "mocha lib/spec/content && mocha lib/spec/core && mocha lib/spec/middleware && mocha lib/spec/tasks",
     "test:content": "tsc -p spec && mocha spec/content",
     "test:core": "tsc -p spec && mocha spec/core",
+    "test:middleware": "tsc -p spec && mocha spec/middleware",
     "test:tasks": "tsc -p spec && mocha spec/tasks",
-    "test:development": "tsc -p spec && mocha spec/development/middleware && mocha spec/development/workload",
-    "test:middleware": "tsc -p spec && mocha spec/development/middleware",
+    "test:development": "tsc -p spec && mocha spec/development/workload",
     "test:workload": "tsc -p spec && mocha spec/development/workload",
     "prepack": "npm install && npm run build && npm run test"
   },
