--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "@types/node": "^10.12.10",
     "browserify": "^16.2.3",
     "chai": "^4.2.0",
-    "msal": "^0.2.4",
     "mocha": "^5.2.0",
+    "msal": "^0.2.4",
     "typescript": "^3.1.6",
-    "uglify-es": "^3.3.9",
-    "window": "^4.2.5"
+    "uglify-es": "^3.3.9"
   },
   "scripts": {
     "compile": "tsc",
