--- a/.huskyrc
+++ b/.huskyrc
@@ -1,5 +1,5 @@
 {
-    "hooks": {
-        "pre-commit": "npm run lint && npm run format && npm run build && npm run test"
-    }
+	"hooks": {
+		"pre-commit": "npm run lint && lint-staged && npm run test"
+	}
 }
