--- a/.huskyrc
+++ b/.huskyrc
@@ -1,5 +1,5 @@
 {
 	"hooks": {
-		"pre-commit": "npm run lint && lint-staged && npm run test"
+		"pre-commit": "lint-staged && npm run lint && npm run test"
 	}
 }
