--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
+		"resolveJsonModule": true,
+		"esModuleInterop": true,
 		"noEmitOnError": true,
 		"noImplicitAny": false,
 		"moduleResolution": "node",
