Updated node environments for travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,14 @@
 language: node_js
 node_js:
   - "node"
-  - "6"
-  - "6.1"
+  - "lts/*"
+  - "10.15.1"
+  - "10.0"
+  - "9.11"
+  - "9.0"
+  - "8.15"
+  - "8.0"
+  - "7.10"
+  - "7.0"
   - "6.9"
-  - "7.2"
-  - "5"
-  - "4"
+  - "6.0"
