--- a/tsconfig-es.json
+++ b/tsconfig-es.json
@@ -1,8 +1,8 @@
 {
 	"extends": "./tsconfig-base.json",
 	"compilerOptions": {
-		"module": "ESNext",
-		"target": "esnext",
+		"module": "es6",
+		"target": "es6",
 		"lib": ["dom", "esnext"],
 		"outDir": "lib/es"
 	},
