--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@microsoft/microsoft-graph-client",
 	"//": "NOTE: The version here should match exactly the exported const PACKAGE_VERSION in Constants.ts. If you change it here, also change it there.",
-	"version": "1.6.0-Preview.3",
+	"version": "1.6.0",
 	"description": "Microsoft Graph Client Library",
 	"main": "lib/src/index.js",
 	"module": "lib/es/index.js",
