Changes: * Removed polyfill dependencies for fetch and promise * Removed Browserify and replaced it with rollup

--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -1,5 +1,6 @@
 {
 	"compilerOptions": {
+		"importHelpers": true,
 		"noEmitOnError": true,
 		"noImplicitAny": false,
 		"moduleResolution": "node",
