--- a/package.json
+++ b/package.json
@@ -11,34 +11,37 @@
 	],
 	"types": "./lib/src/index.d.ts",
 	"dependencies": {
+		"@babel/runtime": "^7.4.4",
 		"es6-promise": "^4.2.6",
 		"isomorphic-fetch": "^2.2.1",
 		"tslib": "^1.9.3"
 	},
 	"devDependencies": {
-		"@types/isomorphic-fetch": "0.0.35",
+		"@babel/core": "^7.4.4",
+		"@babel/plugin-transform-runtime": "^7.4.4",
+		"@babel/preset-env": "^7.4.4",
 		"@types/mocha": "^5.2.6",
-		"@types/node": "^11.13.4",
-		"browserify": "^16.2.3",
+		"@types/node": "^11.13.9",
 		"chai": "^4.2.0",
-		"husky": "^1.3.1",
+		"husky": "^2.2.0",
 		"lint-staged": "^8.1.5",
-		"mocha": "^6.1.3",
+		"mocha": "^6.1.4",
 		"msal": "^0.2.4",
 		"prettier": "^1.17.0",
-		"rollup": "^1.10.0",
+		"rollup": "^1.10.1",
+		"rollup-plugin-babel": "^4.3.2",
+		"rollup-plugin-commonjs": "^9.3.4",
+		"rollup-plugin-node-resolve": "^4.2.3",
 		"rollup-plugin-terser": "^4.0.4",
-		"tslint": "^5.15.0",
+		"tslint": "^5.16.0",
 		"tslint-config-prettier": "^1.18.0",
-		"typescript": "^3.4.3",
+		"typescript": "^3.4.5",
 		"uglify-es": "^3.3.9"
 	},
 	"scripts": {
-		"web:js": "node browserify-with-dependencies.js > lib/graph-js-sdk-web.js && uglifyjs ./lib/graph-js-sdk-web.js --output ./lib/graph-js-sdk-web.js",
-		"core:js": "node browserify.js > lib/graph-js-sdk-core.js && uglifyjs ./lib/graph-js-sdk-core.js --output ./lib/graph-js-sdk-core.js",
 		"build:es": "tsc --p tsconfig-es.json",
 		"build:cjs": "tsc --p tsconfig-cjs.json",
-		"build": "npm run build:cjs && npm run build:es && rollup -c && npm run web:js && npm run core:js",
+		"build": "npm run build:cjs && npm run build:es && rollup -c",
 		"test": "npm run build:cjs && mocha lib/spec/content && mocha lib/spec/core && mocha lib/spec/middleware && mocha lib/spec/tasks",
 		"test:content": "tsc --p spec/tsconfig.json && mocha spec/content",
 		"test:core": "tsc --p spec/tsconfig.json && mocha spec/core",
