--- a/samples/browser/package.json
+++ b/samples/browser/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "./src/main.js",
 	"scripts": {
-		"copy": "copyfiles -f ../../lib/graph-js-sdk-web.js ./src",
+		"copy": "copyfiles -f ../../lib/graph-js-sdk.js ./src",
 		"start": "npm run copy && light-server --config .lightrc"
 	},
 	"author": "",
