--- a/spec/package.json
+++ b/spec/package.json
@@ -1,10 +1,10 @@
 {
 	"devDependencies": {
-		"@microsoft/microsoft-graph-types": "^1.8.0",
 		"@microsoft/microsoft-graph-types-beta": "microsoftgraph/msgraph-typescript-typings#beta",
 		"@types/chai": "^4.1.7",
 		"@types/form-data": "^2.2.1",
 		"@types/isomorphic-fetch": "0.0.35",
+		"@types/microsoft-graph": "^1.9.0",
 		"@types/mocha": "^5.2.6",
 		"@types/node": "^12.0.0",
 		"chai": "^4.2.0",
