--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "@microsoft/microsoft-graph-client",
 	"version": "2.1.0-Preview.1",
 	"description": "Microsoft Graph Client Library",
+	"license": "MIT",
 	"main": "lib/src/index.js",
 	"module": "lib/es/index.js",
 	"typings": "lib/src/index",
