Adding formdata to the node project, setting the esModuleInterop config as true for allowing import of npm modules, adding unit test for application/xhtml+xml content type post

--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
 		"@babel/plugin-transform-runtime": "^7.4.4",
 		"@babel/preset-env": "^7.4.4",
 		"@types/mocha": "^5.2.6",
-		"@types/node": "^12.0.10",
+		"@types/node": "^12.12.53",
 		"chai": "^4.2.0",
+		"form-data": "^3.0.0",
 		"gulp": "^4.0.2",
 		"husky": "^2.2.0",
 		"isomorphic-fetch": "^2.2.1",
