--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
 		"@babel/preset-env": "^7.4.4",
 		"@types/mocha": "^5.2.6",
 		"@types/node": "^12.0.10",
+		"@typescript-eslint/eslint-plugin": "^3.8.0",
+		"@typescript-eslint/parser": "^3.8.0",
 		"chai": "^4.2.0",
+		"eslint": "^7.6.0",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-prettier": "^3.1.4",
 		"gulp": "^4.0.2",
 		"husky": "^2.2.0",
 		"isomorphic-fetch": "^2.2.1",
@@ -34,8 +39,6 @@
 		"rollup-plugin-commonjs": "^10.0.1",
 		"rollup-plugin-node-resolve": "^5.2.0",
 		"rollup-plugin-terser": "^5.0.0",
-		"tslint": "^5.16.0",
-		"tslint-config-prettier": "^1.18.0",
 		"typescript": "^3.4.5",
 		"uglify-es": "^3.3.9"
 	},
@@ -52,7 +55,7 @@
 		"test:tasks": "tsc --p spec/tsconfig.json && mocha spec/tasks",
 		"test:development": "tsc --p spec/tsconfig.json && mocha spec/development/workload",
 		"test:workload": "tsc --p spec/tsconfig.json && mocha spec/development/workload",
-		"lint": "tslint --project ./tsconfig-cjs.json -c tslint.json",
+		"lint": "eslint ./ --quiet",
 		"format:css": "prettier --write \"**/*.css\"",
 		"format:html": "prettier --write \"**/*.html\"",
 		"format:js": "prettier --write \"**/*.js\"",
