--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "@microsoft/microsoft-graph-client",
-	"version": "2.0.0",
+	"version": "2.1.0",
 	"description": "Microsoft Graph Client Library",
+	"license": "MIT",
 	"main": "lib/src/index.js",
 	"module": "lib/es/index.js",
 	"typings": "lib/src/index",
