--- a/spec/package.json
+++ b/spec/package.json
@@ -1,17 +1,19 @@
 {
 	"devDependencies": {
 		"@microsoft/microsoft-graph-types-beta": "microsoftgraph/msgraph-typescript-typings#beta",
-		"@types/chai": "^4.1.7",
+		"@types/chai": "^4.2.14",
 		"@types/form-data": "^2.2.1",
 		"@types/isomorphic-fetch": "0.0.35",
 		"@types/microsoft-graph": "^1.9.0",
-		"@types/mocha": "^5.2.6",
+		"@types/mocha": "^5.2.7",
 		"@types/node": "^12.0.0",
 		"chai": "^4.2.0",
 		"es6-promise": "^4.2.6",
 		"form-data": "^2.3.3",
 		"isomorphic-fetch": "^2.2.1",
+		"mocha": "^8.2.1",
 		"msal": "^1.0.0",
-		"node-fetch": "^2.6.1"
+		"node-fetch": "^2.6.1",
+		"ts-node": "^9.0.0"
 	}
 }
