--- a/spec/package.json
+++ b/spec/package.json
@@ -1,5 +1,6 @@
 {
 	"devDependencies": {
+		"@azure/identity": "^1.1.0",
 		"@microsoft/microsoft-graph-types-beta": "microsoftgraph/msgraph-typescript-typings#beta",
 		"@types/chai": "^4.1.7",
 		"@types/form-data": "^2.2.1",
@@ -7,6 +8,7 @@
 		"@types/microsoft-graph": "^1.9.0",
 		"@types/mocha": "^5.2.6",
 		"@types/node": "^12.0.0",
+		"@types/sinon": "^9.0.9",
 		"chai": "^4.2.0",
 		"es6-promise": "^4.2.6",
 		"form-data": "^2.3.3",
