--- a/samples/tokenCredentialSamples/AuthenticationCodeFlow/package.json
+++ b/samples/tokenCredentialSamples/AuthenticationCodeFlow/package.json
@@ -1,21 +1,16 @@
 {
 	"name": "authentication_code_flow_sample",
 	"version": "1.0.0",
-	"description": "sample for auth provider using token credentials",
-	"main": "src/AuthenticationCodeSample.js",
+	"description": "sample of an auth provider using token credentials",
 	"scripts": {
-		"test": "tsc",
-		"build": "tsc --p tsconfig.json && node src/AuthenticationCodeSample.js"
-	},
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@azure/identity": "^1.1.0",
-		"typescript": "^4.0.3"
+		"start": "npm install && npx ts-node src/index.ts"
 	},
 	"dependencies": {
+		"@azure/identity": "^1.1.0",
 		"express": "^4.17.1",
 		"open": "^7.2.1",
-		"qs": "^6.9.4"
+		"qs": "^6.9.4",
+		"ts-node": "^9.0.0",
+		"typescript": "^4.0.3"
 	}
 }
