--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
 	"extends": "./tsconfig-base.json",
 	"compilerOptions": {
-		"module": "es6",
+		"module": "commonjs",
 		"target": "es6",
 		"lib": ["dom", "esnext"],
 		"outDir": "lib/es"
 	},
 	"exclude": ["node_modules", "lib", "samples", "spec/development"],
-	"include": ["./src/**/*.ts"]
+	"include": ["./src/**/*.ts", "./spec/**/*.ts"]
 }
