--- a/tsconfig-cjs.json
+++ b/tsconfig-cjs.json
@@ -4,8 +4,10 @@
 		"module": "commonjs",
 		"target": "es5",
 		"lib": ["dom", "esnext"],
-		"outDir": "lib"
+		"outDir": "lib",
+		"composite": true
 	},
 	"exclude": ["node_modules", "lib", "samples", "spec/development"],
-	"include": ["./src/**/*.ts", "./spec/**/*.ts"]
+	"include": ["./src/**/*.ts"],
+	"references": []
 }
